<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gaurav.smar_test2.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:orderInCategory="104"
        android:title="@string/action_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_service"
        android:orderInCategory="100"
        android:title="@string/action_start_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_service"
        android:orderInCategory="101"
        android:title="@string/action_stop_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_people"
        android:orderInCategory="102"
        android:title="@string/action_add_people"
        app:showAsAction="never" />
</menu>
